--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "axios": "^1.7.2",
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "react": "18.2.0",
     "react-native": "0.74.1"
   },
